2006-10-15  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/rb_cairo.c (Cairo::BINDINGS_VERSION): moved
	from ...
	* packages/cairo/lib/cairo.rb: ... here.

2006-10-15  Mathieu Blondel <mathieu@mblondel.org>

	* packages/cairo/lib/cairo.rb (Cairo::Context#quad_to,
	Cairo::Context#rel_quad_to): followed the current API:
	get_point -> current_point.

2006-07-11  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/rb_cairo_constants.c: added a check whether
	SVG surface is available or not.

2006-07-01  Kouhei Sutou  <kou@cozmixng.org>

	* NEWS: added 1.2.0 entry.

2006-07-01  Kouhei Sutou  <kou@cozmixng.org>

	* README: supported only 1.2.0 or higher.
	* packages/cairo/ext/extconf.rb: ditto.

	* packages/cairo/ext/cairo.def: added
	rb_cairo_svg_version_from_ruby_object().

	* packages/cairo/ext/rb_cairo.c (Init_cairo): initialize constants
	before other modules.

	* packages/cairo/ext/rb_cairo.h:
	  - include all available header files.
	  - supported cairo_svg_version_t.

	* packages/cairo/ext/rb_cairo_constants.c: supported
	cairo_svg_surface_t.

	* packages/cairo/ext/rb_cairo_surface.c: supported missing
	functions in cairo-ps.h, cairo-pdf.h and cairo-svg.h.

	* packages/cairo/lib/cairo.rb
	(Cairo::SVGSurface.versions_as_string): added convenience method.

2006-06-27  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/rb_cairo_surface.c: use cairo_surface_type_t
	for Ruby <-> C surface conversion.

	* packages/cairo/ext/rb_cairo_context.c (cr_push_group): changed
	default arguments handling to
	  push_group(content=nil, pop_to_source=true)
	from
	  push_group(content=nil, pop_to_source=false)

	* packages/cairo/ext/rb_cairo.c: fixed Cairo::VERSION.

2006-06-25  Kouhei Sutou  <kou@cozmixng.org>

	* README, packages/cairo/ext/extconf.rb: supported only 1.1.10 or
	higher.

	* packages/cairo/ext/rb_cairo_constants.c: supported
	CAIRO_FORMAT_RGB16_565.

	* packages/cairo/ext/rb_cairo_surface.c:
	  - supported cairo_surface_get_content(),