@@ -1,8 +1,24 @@
 # vim: filetype=ruby:expandtab:shiftwidth=2:tabstop=8:softtabstop=2 :
 
+module Cairo
+  def self.__add_one_arg_setter(klass)
+    names = klass.instance_methods(false)
+    names.each do |name|
+      if /^set_(.*)/ =~ name and
+          not names.include? "#{$1}=" and
+          klass.instance_method(name).arity == 1
+        klass.module_eval("def #{$1}=(val); set_#{$1}(val); val; end")
+      end
+    end
+  end
+end
+
 require 'cairo.so'
 
 module Cairo
+  class << self
+    undef __add_one_arg_setter
+  end
 
   module_function
   def bindings_version
@@ -11,21 +27,8 @@ module Cairo
     version << "-#{tag}" if tag
     version
   end
-  
-  def __add_one_arg_setter(klass)
-    names = klass.instance_methods(false)
-    names.each do |name|
-      if /^set_(.*)/ =~ name and
-        not names.include? "#{$1}=" and
-        klass.instance_method(name).arity == 1
-        klass.module_eval("def #{$1}=(val); set_#{$1}(val); val; end")
-      end
-    end
-  end
 
   class Context
-    Cairo.__add_one_arg_setter(self)
-
     def quad_to(x1, y1, x2, y2)
       x0, y0 = current_point
       cx1 = x0 + 2 * (x1 - x0) / 3.0
@@ -34,7 +37,7 @@ module Cairo
       cy2 = cy1 + (y2 - y0) / 3.0
       curve_to(cx1, cy1, cx2, cy2, x2, y2)
     end
-    
+
     def rel_quad_to(x1, y1, x2, y2)
       x0, y0 = current_point
       quad_to(x1 + x0, y1 + y0, x2 + x0, y2 + x0)
@@ -48,9 +51,9 @@ module Cairo
 
       y_radius ||= x_radius
 
-      x_radius = [x_radius, width / 2].min
-      y_radius = [y_radius, height / 2].min
-      
+      x_radius = [x_radius, width / 2.0].min
+      y_radius = [y_radius, height / 2.0].min
+
       xr1 = x_radius
       xr2 = x_radius / 2.0
       yr1 = y_radius
@@ -67,14 +70,10 @@ module Cairo
       curve_to(x1, y1 + yr2, x1 + xr2, y1, x1 + xr1, y1)
       close_path
     end
-    
+
     def circle(x, y, radius)
       arc(x, y, radius, 0, 2 * Math::PI)
     end
-  end
-
-  class Glyph
-    Cairo.__add_one_arg_setter(self)
   end
 
   class Surface
@@ -100,7 +99,7 @@ module Cairo
     def dup
       Matrix.new(*to_a)
     end
-    
+
     def clone
       copy = dup
       copy.freeze if self.frozen?
@@ -113,17 +112,5 @@ module Cairo
     def invert; dup.invert!; end
     def multiply(other); dup.multiply!(other); end
     alias * multiply
-  end
-
-  class FontOptions
-    Cairo.__add_one_arg_setter(self)
-  end
-
-  class Pattern
-    Cairo.__add_one_arg_setter(self)
-  end
-
-  class SurfacePattern
-    Cairo.__add_one_arg_setter(self)
   end
 end
